fix bug on firefox , crash flex property

--- a/frontend/valius/src/styles/components/EvaluationProcess/_evaluationProcess.scss
+++ b/frontend/valius/src/styles/components/EvaluationProcess/_evaluationProcess.scss
@@ -31,6 +31,11 @@
 
         &__icon {
             width: 50px;
+            height: 50px;
+        }
+
+        &__label-container {
+            display: flex;
         }
 
         table {
